--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -21,6 +21,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "qrcode": "^1.4.4",
+    "speakeasy": "^2.0.0"
   }
 }
