--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -16,13 +16,17 @@
   "author": "Petar",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.32.1",
     "qrcode": "^1.4.4",
+    "rxjs": "^7.8.1",
+    "rxjs-compat": "^6.3.3",
+    "sequelize": "^6.32.1",
     "speakeasy": "^2.0.0"
   }
 }
